--- a/myfinanceops/myfinanceops_frontend/src/assets/main.css
+++ b/myfinanceops/myfinanceops_frontend/src/assets/main.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.slide-fade-enter-active, .slide-fade-leave-active {
+    transition: transform 0.5s ease;
+}
+
+.slide-fade-enter, .slide-fade-leave-to {
+    transform: translateX(100%);
+}
